debhelper (10.10.9) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * qmake.pm: Add missing import of generated_file.
  * meson.pm: Find typo of meson in the name of the cross config
    file.
  * qmake.pm: Push compiler information as ‘early’ flags to qmake, to
    make sure qmake calls the right compiler to get library paths.

 -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000

debhelper (10.10.8) unstable; urgency=medium

  [ Niels Thykier ]
  * Document that compat 11 is now in its open beta phase.
  * Dh_Getopt: Improve warning message when a package is excluded
    due to profiles or architecture restrictions.
  * dh_install: Properly allow patterns to be excluded without
    complaining about missing files.  (Closes: #881658)
  * qmake.pm: Ensure that the qmake cross-build config file
    survives until clean.

  [ Dmitry Shachnev ]
  * qmake.pm: Set QMAKE_LINK correctly for cross-builds.

 -- Niels Thykier <niels@thykier.net>  Wed, 15 Nov 2017 19:46:00 +0000

debhelper (10.10.7) unstable; urgency=medium

  * dh_strip: Fix a regression that caused debug symbols for
    executables to be discarded instead of included into
    debug packages.
  * Dh_Lib: Ensure that $dh{U_PARAMS} is always defined as a
    list.  Thanks to Adrian Bunk for the bug report.

 -- Niels Thykier <niels@thykier.net>  Sat, 11 Nov 2017 14:10:21 +0000

debhelper (10.10.6) unstable; urgency=medium

  [ Axel Beckert ]
  * Cleanup trailing whitespace in ancient debian/changelog entries and
    debian/rules.
  * Fix typo "belive" in debian/copyright and ancient debian/changelog
    entries.
  * Use HTTPS in debian/copyright format URL.

  [ Niels Thykier ]
  * Remove support for named compat levels.
  * dh_perl: Make dh_perl faster on packages with large doc
    directories by pruning the entire doc directory.
  * dh,dh_auto_*: Support skipping all of the dh_auto_* helpers if the
    package does not seem to have a build system (and there are no build