@@ -6,6 +6,9 @@ debhelper (10.10.9) UNRELEASED; urgency=medium
     file.
   * qmake.pm: Push compiler information as ‘early’ flags to qmake, to
     make sure qmake calls the right compiler to get library paths.
+  * qmake.pm: Add all possible settings to generated qmake-cross.conf.
+    Now output of ‘qmake -query’ with and without using this file is
+    identical. This makes cross-building Qt’s own modules possible.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000
 
